refactor: <swagger> se genera documentación swagger actualizada
